--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <!-- TODO 6: Add images to show the project previews
     HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
     https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-    <a href="./public/movie-ranking.html">Movie Ranking Project</a>
+    <a href="./public/movie-ranking.html">Movie Ranking Project</a> <br>
     <img src="./assets/images/movie-ranking.jpg" alt="movie ranking project preview">
     <hr>
-    <a href="./public/birthday-invite.html">Birthday Invite Project</a>
+    <a href="./public/birthday-invite.html">Birthday Invite Project</a> <br>
     <img src="./assets/images/birthday-cake-ss.jpg" alt="Birthday invite project preview">
     <hr>
     <!-- TODO 7: Add the Contact Me and About Me page links -->
